[gd_scene load_steps=12 format=3 uid="uid://hh0cw4r161t4"]

[ext_resource type="FontFile" uid="uid://b0hwhovhyt8ah" path="res://assets/fonts/monogram.ttf" id="1_21isl"]
[ext_resource type="Script" path="res://scenes/game_hacking/game_hacking.gd" id="1_ecdo0"]
[ext_resource type="Script" path="res://scenes/game_hacking/editor.gd" id="3_qir6j"]
[ext_resource type="AudioStream" uid="uid://bwb23idlsgvv4" path="res://assets/sounds/puzzle15_button.ogg" id="4_jw12w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_py2yy"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bk7fk"]
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8w6g"]
bg_color = Color(0.176419, 0.176419, 0.176419, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q16gc"]
bg_color = Color(0.235294, 0.235294, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkhny"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tch6s"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68d0y"]
bg_color = Color(0.0646965, 0.0646965, 0.0646965, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="GameHacking" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(648, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecdo0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_py2yy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Objects" type="Control" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2

[node name="Panel" type="Panel" parent="HBoxContainer/Objects"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bk7fk")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Objects"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 48.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/Objects"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 8.0
offset_right = 42.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 16
text = "UI_OBJECTS"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_s8w6g")

[node name="ButtonsContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Control"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -24.0
offset_right = 656.0
offset_bottom = 24.0
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_21isl")
theme_override_font_sizes/font_size = 32
text = "Game:"

[node name="PlayButton" type="Button" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_q16gc")
text = "UI_PLAY"

[node name="RestartButton" type="Button" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_q16gc")
text = "UI_RESTART"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer"]
layout_mode = 2

[node name="MenuButton" type="Button" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_q16gc")
text = "UI_MENU"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_21isl")
theme_override_font_sizes/font_size = 32
text = "Deviations:"

[node name="Control" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer"]
visible = false
custom_minimum_size = Vector2(16, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer/Control"]
custom_minimum_size = Vector2(16, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vkhny")

[node name="Panel2" type="Panel" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer/Control"]
custom_minimum_size = Vector2(16, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vkhny")

[node name="Panel3" type="Panel" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer/Control"]
custom_minimum_size = Vector2(16, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vkhny")

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/VBoxContainer/Control/ButtonsContainer"]
visible = false
layout_mode = 2

[node name="Editor" type="Control" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_qir6j")

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/Editor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tch6s")

[node name="DisplayedText" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/Editor"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
offset_left = 16.0
offset_top = 40.0
offset_right = 592.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Select an object to edit"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ObjectIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer/Editor"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 16.0
offset_right = -32.0
offset_bottom = 144.0
grow_horizontal = 0
pivot_offset = Vector2(64, 64)
expand_mode = 5
stretch_mode = 5

[node name="ObjectCount" type="Label" parent="HBoxContainer/VBoxContainer/Editor"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -288.0
offset_right = -24.0
offset_bottom = -237.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(44, 25.5)
theme_override_fonts/font = ExtResource("1_21isl")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 2
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Editor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -64.0
offset_right = 132.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Output" type="Control" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/Output"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_68d0y")

[node name="OutpuScroll" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/Output"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 2

[node name="OutputContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Output/OutpuScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_jw12w")
volume_db = -20.0
pitch_scale = 2.0
bus = &"SFX"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Control/ButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Control/ButtonsContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Control/ButtonsContainer/MenuButton" to="." method="_on_menu_button_pressed"]
